fix all current checkstyle errors in the tests