@@ -5,14 +5,21 @@ import static org.mockito.Mockito.verifyNoInteractions;
 import static org.mockito.Mockito.when;
 
 import java.math.BigDecimal;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Calendar;
+import java.util.Collections;
+import java.util.List;
+import java.util.Optional;
+import java.util.Random;
+import java.util.UUID;
+import nl.tudelft.sem.template.order.PersistentBagMock;
 import nl.tudelft.sem.template.order.commons.Address;
 import nl.tudelft.sem.template.order.commons.Dish;
 import nl.tudelft.sem.template.order.commons.Order;
 import nl.tudelft.sem.template.order.domain.helpers.FilteringParam;
 import nl.tudelft.sem.template.order.domain.user.repositories.DishRepository;
 import nl.tudelft.sem.template.order.domain.user.repositories.OrderRepository;
-import nl.tudelft.sem.template.order.PersistentBagMock;
 import org.hibernate.collection.internal.PersistentBag;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
@@ -26,14 +33,6 @@ import org.mockito.junit.jupiter.MockitoExtension;
 @ExtendWith(MockitoExtension.class)
 class OrderServiceTests {
 
-    @Mock
-    private transient OrderRepository orderRepository;
-    @Mock
-    private transient DishRepository dishRepository;
-
-    @InjectMocks
-    private transient OrderService orderService;
-
     transient Dish d1;
     transient Dish d1CopyResult;
     transient Dish d2;
@@ -45,6 +44,12 @@ class OrderServiceTests {
     transient List<String> ingredients = new ArrayList<>();
     transient Order order3;
     transient List<Order> orders;
+    @Mock
+    private transient OrderRepository orderRepository;
+    @Mock
+    private transient DishRepository dishRepository;
+    @InjectMocks
+    private transient OrderService orderService;
 
     @BeforeEach
     void setup() {
@@ -59,7 +64,6 @@ class OrderServiceTests {
         PersistentBag pbAllergies = new PersistentBagMock();
         pbAllergies.addAll(allergies);
         d1.setListOfAllergies(pbAllergies);
-//        d1.setListOfAllergies(allergies);
         ingredients = new ArrayList<>();
         ingredients.add("Cheese");
         ingredients.add("Salami");
@@ -106,7 +110,7 @@ class OrderServiceTests {
         a1.setCountry("Netherlands");
         a1.setZip("2628CC");
 
-        List<UUID> listOfDishes1 = List.of(d1.getDishID(),d2.getDishID());
+        List<UUID> listOfDishes1 = List.of(d1.getDishID(), d2.getDishID());
         PersistentBag pbDishes = new PersistentBagMock();
         pbDishes.addAll(listOfDishes1);
 
@@ -159,7 +163,7 @@ class OrderServiceTests {
         order3.setCustomerID(order1.getCustomerID());
         order3.setAddress(a2);
         order3.setDate(new BigDecimal("1700006405030"));
-        order3.setListOfDishes(Arrays.asList(UUID.randomUUID()));
+        order3.setListOfDishes(List.of(UUID.randomUUID()));
         order3.setSpecialRequirements("The bell doesn't work");
         order3.setOrderPaid(false);
         order3.setStatus(Order.StatusEnum.DELIVERED);
@@ -208,6 +212,7 @@ class OrderServiceTests {
                 () -> orderService.createOrder(order1));
 
     }
+
     @Test
     void testCreateOrderNullOrder() {
 
@@ -245,7 +250,7 @@ class OrderServiceTests {
 
         Order returned = orderService.getOrderById(order1.getOrderID());
 
-        Assertions.assertEquals(returned,order1CopyResult);
+        Assertions.assertEquals(returned, order1CopyResult);
     }
 
     @Test
@@ -277,7 +282,7 @@ class OrderServiceTests {
 
         Order edited = orderService.editOrderByID(order1.getOrderID(), order1);
         order1CopyResult.setRating(2);
-        Assertions.assertEquals(edited,order1CopyResult);
+        Assertions.assertEquals(edited, order1CopyResult);
 
     }
 
@@ -298,6 +303,7 @@ class OrderServiceTests {
                 () -> orderService.editOrderByID(null, order1));
 
     }
+
     @Test
     void testEditOrderByIDNullOrder() {
 
@@ -373,7 +379,8 @@ class OrderServiceTests {
 
         when(orderRepository.existsByVendorID(nonExistingVendorID)).thenReturn(false);
 
-        Assertions.assertThrows(VendorNotFoundException.class, () -> orderService.getOrdersFromCustomerAtVendor(nonExistingVendorID, order1.getCustomerID()));
+        Assertions.assertThrows(VendorNotFoundException.class,
+                () -> orderService.getOrdersFromCustomerAtVendor(nonExistingVendorID, order1.getCustomerID()));
     }
 
     @Test
@@ -383,23 +390,28 @@ class OrderServiceTests {
         when(orderRepository.existsByVendorID(order1.getVendorID())).thenReturn(true);
         when(orderRepository.existsByCustomerID(nonExistingCustomerID)).thenReturn(false);
 
-        Assertions.assertThrows(CustomerNotFoundException.class, () -> orderService.getOrdersFromCustomerAtVendor(order1.getVendorID(), nonExistingCustomerID));
+        Assertions.assertThrows(CustomerNotFoundException.class,
+                () -> orderService.getOrdersFromCustomerAtVendor(order1.getVendorID(), nonExistingCustomerID));
     }
 
     @Test
     void getOrdersFromCostumerAtVendor_EmptyOrder() {
         when(orderRepository.existsByVendorID(order1.getVendorID())).thenReturn(true);
         when(orderRepository.existsByCustomerID(order1.getCustomerID())).thenReturn(true);
-        when(orderRepository.findOrdersByVendorIDAndCustomerID(order1.getVendorID(), order1.getCustomerID())).thenReturn(Optional.empty());
+        when(orderRepository.findOrdersByVendorIDAndCustomerID(order1.getVendorID(),
+                order1.getCustomerID())).thenReturn(Optional.empty());
 
-        Assertions.assertThrows(NoOrdersException.class, () -> orderService.getOrdersFromCustomerAtVendor(order1.getVendorID(), order1.getCustomerID()));
+        Assertions.assertThrows(NoOrdersException.class,
+                () -> orderService.getOrdersFromCustomerAtVendor(order1.getVendorID(), order1.getCustomerID()));
     }
 
     @Test
-    void getOrdersFromCostumerAtVendor_NonEmptyResult() throws VendorNotFoundException, CustomerNotFoundException, NoOrdersException {
+    void getOrdersFromCostumerAtVendor_NonEmptyResult()
+            throws VendorNotFoundException, CustomerNotFoundException, NoOrdersException {
         when(orderRepository.existsByVendorID(order1.getVendorID())).thenReturn(true);
         when(orderRepository.existsByCustomerID(order1.getCustomerID())).thenReturn(true);
-        when(orderRepository.findOrdersByVendorIDAndCustomerID(order1.getVendorID(), order1.getCustomerID())).thenReturn(Optional.of(List.of(order1, order2)));
+        when(orderRepository.findOrdersByVendorIDAndCustomerID(order1.getVendorID(),
+                order1.getCustomerID())).thenReturn(Optional.of(List.of(order1, order2)));
 
         List<Order> result = orderService.getOrdersFromCustomerAtVendor(order1.getVendorID(), order1.getCustomerID());
 
@@ -426,7 +438,8 @@ class OrderServiceTests {
     @Test
     void getOrderVolume_WithOrders() throws VendorNotFoundException, NoOrdersException {
         when(orderRepository.existsByVendorID(order1.getVendorID())).thenReturn(true);
-        when(orderRepository.countOrderByVendorID(order1.getVendorID())).thenReturn(Optional.of(21));
+        when(orderRepository.countOrderByVendorID(order1.getVendorID()))
+                .thenReturn(Optional.of(21));
 
         assertThat(orderService.getOrderVolume(order1.getVendorID())).isEqualTo(21);
     }
@@ -437,7 +450,8 @@ class OrderServiceTests {
 
         when(orderRepository.existsByVendorID(nonExistingVendorID)).thenReturn(false);
 
-        Assertions.assertThrows(VendorNotFoundException.class, () -> orderService.getDishesSortedByVolume(nonExistingVendorID));
+        Assertions.assertThrows(VendorNotFoundException.class,
+                () -> orderService.getDishesSortedByVolume(nonExistingVendorID));
     }
 
     @Test
@@ -482,7 +496,7 @@ class OrderServiceTests {
             Calendar calendar = Calendar.getInstance();
             calendar.setTimeInMillis(cur);
             int hours = calendar.get(Calendar.HOUR_OF_DAY);
-            time[hours]+=1;
+            time[hours] += 1;
         }
         List<Integer> correctTime = new ArrayList<>();
         for (int j : time) {
@@ -525,7 +539,8 @@ class OrderServiceTests {
         when(filteringParam.filtering(order3)).thenReturn(false);
         when(filteringParam.filtering(order1)).thenReturn(false);
 
-        Assertions.assertThrows(NoOrdersException.class, () -> orderService.getPastOrdersByCustomerID(order1.getCustomerID(), filteringParam));
+        Assertions.assertThrows(NoOrdersException.class,
+                () -> orderService.getPastOrdersByCustomerID(order1.getCustomerID(), filteringParam));
 
     }
 
@@ -536,19 +551,20 @@ class OrderServiceTests {
 
         FilteringParam<Order> filteringParam = Mockito.mock(FilteringParam.class);
 
-        Assertions.assertThrows(NoOrdersException.class, () -> orderService.getPastOrdersByCustomerID(randomUUID, filteringParam));
+        Assertions.assertThrows(NoOrdersException.class,
+                () -> orderService.getPastOrdersByCustomerID(randomUUID, filteringParam));
         verifyNoInteractions(filteringParam);
     }
 
     @Test
-    void testOrderIsPaidUpdateIdNotFound(){
+    void testOrderIsPaidUpdateIdNotFound() {
         UUID randomId = UUID.randomUUID();
         when(orderRepository.findOrderByOrderID(randomId)).thenReturn(Optional.empty());
         Assertions.assertThrows(OrderNotFoundException.class, () -> orderService.orderIsPaidUpdate(randomId));
     }
 
     @Test
-    void testOrderIsPaidUpdateTrueToFalseCase() throws OrderNotFoundException{
+    void testOrderIsPaidUpdateTrueToFalseCase() throws OrderNotFoundException {
         when(orderRepository.findOrderByOrderID(order1.getOrderID())).thenReturn(Optional.of(order1));
         Order o1 = orderService.orderIsPaidUpdate(order1.getOrderID());
         Assertions.assertFalse(o1.getOrderPaid());
@@ -556,7 +572,7 @@ class OrderServiceTests {
     }
 
     @Test
-    void testOrderIsPaidUpdateFalseToTrueCase() throws OrderNotFoundException{
+    void testOrderIsPaidUpdateFalseToTrueCase() throws OrderNotFoundException {
         order1.setOrderPaid(false);
         when(orderRepository.findOrderByOrderID(order1.getOrderID())).thenReturn(Optional.of(order1));
         Order o1 = orderService.orderIsPaidUpdate(order1.getOrderID());
